--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,3 +95,10 @@ button {
 button:hover {
     background-color: var(--jaune);
 }
+
+.reini {
+    width: 200px;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+}
